developing session logic